Add existing file

--- a/future_member.html
+++ b/future_member.html
@@ -153,7 +153,7 @@
                             <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">Events <span class="caret"></span></a>
                             <ul class=" dropdown-menu" role="menu">
                                 <li>
-                                    <a href="events.html" title="Books">Events Page</a>
+                                    <a href="lab_events.html" title="Books">Events Page</a>
                                 </li>
                                 <li>
                                     <a href="events_single.html" title="Journal Articles">Events Single Page</a>
