--- a/lab_events.html
+++ b/lab_events.html
@@ -239,7 +239,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <article class="sabbi-events-item">
-                            <a href="events_single.html" id="psc" onclick="getLinkValue(psc)" class="sabbi-events-link">
+                            <a href="events_single.html?event=psc" class="sabbi-events-link">
                                 <figure class="img-hover-zoom">
                                     <img class="sabbi-events-img img-responsive lab_event"
                                         src="assets/img/events/PSCshowcase_2019/d791cf15-ac89-4759-97d8-239827926698.JPG"
@@ -260,7 +260,7 @@
                     </div>
                     <div class="col-sm-6">
                         <article class="sabbi-events-item">
-                            <a href="events_single.html" id="winter" onclick="getLinkValue(winter)" class="sabbi-events-link">
+                            <a href="events_single.html?event=winter" class="sabbi-events-link">
                                 <figure class="img-hover-zoom">
                                     <img class="sabbi-events-img img-responsive lab_event"
                                         src="assets/img/events/USU_winter/IMG_1201.JPG" alt="thompson">
@@ -285,7 +285,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <article class="sabbi-events-item">
-                            <a href="events_single.html" class="sabbi-events-link">
+                            <a href="events_single.html?event=rocky" class="sabbi-events-link">
                                 <figure class="img-hover-zoom">
                                     <img class="sabbi-events-img img-responsive lab_event"
                                         style="transform: rotate(180deg);"
@@ -306,7 +306,7 @@
                     </div>
                     <div class="col-sm-6">
                         <article class="sabbi-events-item">
-                            <a href="events_single.html" class="sabbi-events-link">
+                            <a href="events_single.html?event=hsing" class="sabbi-events-link">
                                 <figure class="img-hover-zoom">
                                     <img class="sabbi-events-img img-responsive lab_event"
                                         src="assets/img/events/NCHU-2018/IMG_5118.JPG" alt="thompson">
@@ -331,7 +331,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <article class="sabbi-events-item">
-                            <a href="events_single.html" class="sabbi-events-link">
+                            <a href="events_single.html?event=osu" class="sabbi-events-link">
                                 <figure class="img-hover-zoom">
                                     <img class="sabbi-events-img img-responsive lab_event"
                                         src="assets/img/events/OSU-President's Cup Dec2013//11310703416_5d39f89a49.png"
