Add existing file

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ div#sliding_animation ul {
                                         <a href="lab_events.html" title="Books">Events Page</a>
                                     </li>
                                     <li>
-                                        <a href="events_single.html" title="Journal Articles">Events Single Page</a>
+                                        <a href="events_single.html?event=psc" title="Journal Articles">Events Single Page</a>
                                     </li>
                                 </ul>
                             </li>
