Add existing file

--- a/events.html
+++ b/events.html
@@ -210,7 +210,7 @@ svg {
                             <a href="people.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                             <li>
-                                <a href="professor.html" title="Dr Rushmore">Dr. Rushmore</a>
+                                <a href="professor.html" title="Dr Rushmore">Dr. Rakesh Kaundal</a>
                             </li>
                             <li>
                                 <a href="ourteam.html" title="Our Team">Our Team</a>
