--- a/lab_conf-talk.html
+++ b/lab_conf-talk.html
@@ -321,7 +321,7 @@
                                     <div class="time-month">Aug 07</div>
                                 </div>
                                 <div class="timeline-meta">
-                                    <h3 class="staff-title zoom" onmouseover = "myFunction()">Phatak S.<sup>^</sup>, Thomas A.,<strong data-toggle="tooltip" data-placement="top">Kaundal R.</strong>, <i data-toggle="tooltip" data-placement="top">Jones R.</i>, Hintze K. and Benninghoff A.</h3>
+                                    <h3 class="staff-title zoom" onmouseover = "">Phatak S.<sup>^</sup>, Thomas A.,<strong data-toggle="tooltip" data-placement="top">Kaundal R.</strong>, <i data-toggle="tooltip" data-placement="top">Jones R.</i>, Hintze K. and Benninghoff A.</h3>
                                         <!-- <div class="__time">7:00pm</div> -->
                                     <div class="__loc"><span>Location:</span>The Animal, Dairy and Veterinary Sciences Summer Student Research
                                         Symposium; Utah State University (USU), Logan (UT)</div>
