--- a/lab_conf-talk.html
+++ b/lab_conf-talk.html
@@ -152,7 +152,7 @@
                             <a href="people.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                             <li>
-                                <a href="professor.html" title="Dr Rushmore">Dr. Rushmore</a>
+                                <a href="professor.html" title="Dr Rushmore">Dr. Kaundal</a>
                             </li>
                             <li>
                                 <a href="ourteam.html" title="Our Team">Our Team</a>
@@ -178,31 +178,31 @@
                             <a href="events.html" class="dropdown-toggle"   data-hover="dropdown" title="Tools" data-animations="zoomIn">Tools<span class="caret"></span></a>
                             <ul class=" dropdown-menu" role="menu">
                                 <li>
-                                    <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">Pred HPI</a>
+                                    <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">PredHPI</a>
                                 </li>
                                 <li>
-                                    <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">Greening DB</a>
+                                    <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">GreeningDB</a>
                                 </li>
                                 <li>
-                                    <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank" title="Plant-mSubP">Plant mSubP</a>
+                                    <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank" title="Plant-mSubP">Plant-mSubP</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">Lac SubPred</a>
+                                        <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">LacSubPred</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">Lig Pred</a>
+                                        <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">LigPred</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">Ap-iNet</a>
+                                        <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">AP-iNET</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">At SubP</a>
+                                        <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">AtSubP</a>
                                 </li>
                                 <li>
                                         <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank" title="RB-Pred">RB-Pred</a>
                                 </li>
                                 <li>
-                                        <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RS Lpred</a>
+                                        <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RSLpred</a>
                                 </li>
                                 <li>
                                         <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
@@ -1306,7 +1306,7 @@
                                 <div class="widget-main">
                                     <h2 class="widget-title">Publications</h2>
                                     <ul class="list list-unstyled list-footer-nav">
-                                        <li class="footer_text"><a href="lab_journal.html">Journal Article</a></li>
+                                        <li class="footer_text"><a href="lab_journal.html">Journal Articles</a></li>
                                         <li class="footer_text"><a href="lab_conf-talk.html">Conferences and Talks</a></li>
                                     </ul>
                                 </div>
@@ -1374,11 +1374,11 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <div class="widget_black_studio_tinymce" id="black-studio-tinymce-4">
-                            <div class="copyright">Copyright 2017 - <a href="https://wpmanageninja.com/">KAABiL Lab</a></div>
+                            <div class="copyright">Copyright 2017 - <a href="index.html">KAABiL Lab</a></div>
                         </div>
                     </div>
                     <div class="col-sm-4 ">
-                        <div class="powredby">Developed and Managed by: <a href="https://wpmanageninja.com/">Kaundal Research Group</a></div>
+                        <div class="powredby">Developed and Managed by: <a href="ourteam.html">Kaundal Research Group</a></div>
                     </div>
                 </div>
             </div>
