--- a/lab_events.html
+++ b/lab_events.html
@@ -156,36 +156,33 @@
                             data-animations="zoomIn">Tools<span class="caret"></span></a>
                         <ul class=" dropdown-menu" role="menu">
                             <li>
-                                <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">Pred HPI</a>
+                                <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">PredHPI</a>
                             </li>
                             <li>
-                                <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">Greening
-                                    DB</a>
+                                <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">GreeningDB</a>
                             </li>
                             <li>
                                 <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank"
-                                    title="Plant-mSubP">Plant mSubP</a>
+                                    title="Plant-mSubP">Plant-mSubP</a>
                             </li>
                             <li>
-                                <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">Lac
-                                    SubPred</a>
+                                <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">LacSubPred</a>
                             </li>
                             <li>
-                                <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">Lig Pred</a>
+                                <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">LigPred</a>
                             </li>
                             <li>
-                                <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">Ap-iNet</a>
+                                <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">AP-iNET</a>
                             </li>
                             <li>
-                                <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">At SubP</a>
+                                <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">AtSubP</a>
                             </li>
                             <li>
                                 <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank"
                                     title="RB-Pred">RB-Pred</a>
                             </li>
                             <li>
-                                <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RS
-                                    Lpred</a>
+                                <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RSLpred</a>
                             </li>
                             <li>
                                 <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
@@ -242,6 +239,27 @@
                             <a href="events_single.html?event=psc" class="sabbi-events-link">
                                 <figure class="img-hover-zoom">
                                     <img class="sabbi-events-img img-responsive lab_event"
+                                        src="assets/img/events/PAG-2019/20190114_112523.jpg"
+                                        alt="thompson">
+                                    <figcaption class="event_text">
+                                        <h2 class="sabbi-events-title font-md__x " style="color: black;">Plant & Animal Genome Conference
+                                        </h2>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                            <div class="events-item-meta">
+                                <div class="events-loc"><i class="ion-location"></i><span class="text">500 Hotel Circle N,
+                                        San Diego, CA</span></div>
+                                <div class="events-date"><i class="ion-calendar"></i><span class="text">12<sup>th</sup>
+                                        Jan 2019</span></div>
+                            </div>
+                        </article><!-- /.sabbi-events-item -->
+                    </div>
+                    <div class="col-sm-6">
+                        <article class="sabbi-events-item">
+                            <a href="events_single.html?event=psc" class="sabbi-events-link">
+                                <figure class="img-hover-zoom">
+                                    <img class="sabbi-events-img img-responsive lab_event"
                                         src="assets/img/events/PSCshowcase_2019/d791cf15-ac89-4759-97d8-239827926698.JPG"
                                         alt="thompson">
                                     <figcaption class="event_text">
@@ -255,6 +273,27 @@
                                         Hill, Logan, UT</span></div>
                                 <div class="events-date"><i class="ion-calendar"></i><span class="text">23<sup>rd</sup>
                                         March 2019</span></div>
+                            </div>
+                        </article><!-- /.sabbi-events-item -->
+                    </div>
+                    <div class="col-sm-6">
+                        <article class="sabbi-events-item">
+                            <a href="events_single.html?event=psc" class="sabbi-events-link">
+                                <figure class="img-hover-zoom">
+                                    <img class="sabbi-events-img img-responsive lab_event"
+                                        src="assets/img/events/Cricket_2019/7d2e764e.JPG"
+                                        alt="thompson">
+                                    <figcaption class="event_text">
+                                        <h2 class="sabbi-events-title font-md__x " style="color: black;">Cricket in Utah
+                                        </h2>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                            <div class="events-item-meta">
+                                <div class="events-loc"><i class="ion-location"></i><span class="text">6252 W 6200 S,
+                                       Kearns, UT</span></div>
+                                <div class="events-date"><i class="ion-calendar"></i><span class="text">13<sup>th</sup>
+                                        July 2019</span></div>
                             </div>
                         </article><!-- /.sabbi-events-item -->
                     </div>
@@ -420,7 +459,7 @@
                                 <div class="widget-main">
                                     <h2 class="widget-title">Publications</h2>
                                     <ul class="list list-unstyled list-footer-nav">
-                                        <li class="footer_text"><a href="lab_journal.html">Journal Article</a></li>
+                                        <li class="footer_text"><a href="lab_journal.html">Journal Articles</a></li>
                                         <li class="footer_text"><a href="lab_conf-talk.html">Conferences and Talks</a></li>
                                     </ul>
                                 </div>
@@ -488,11 +527,11 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <div class="widget_black_studio_tinymce" id="black-studio-tinymce-4">
-                            <div class="copyright">Copyright 2017 - <a href="https://wpmanageninja.com/">KAABiL Lab</a></div>
+                            <div class="copyright">Copyright 2017 - <a href="index.html">KAABiL Lab</a></div>
                         </div>
                     </div>
                     <div class="col-sm-4 ">
-                        <div class="powredby">Developed and Managed by: <a href="https://wpmanageninja.com/">Kaundal Research Group</a></div>
+                        <div class="powredby">Developed and Managed by: <a href="ourteam.html">Kaundal Research Group</a></div>
                     </div>
                 </div>
             </div>
