--- a/lab_research.html
+++ b/lab_research.html
@@ -177,36 +177,33 @@
                             data-animations="zoomIn">Tools<span class="caret"></span></a>
                         <ul class=" dropdown-menu" role="menu">
                             <li>
-                                <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">Pred HPI</a>
+                                <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">PredHPI</a>
                             </li>
                             <li>
-                                <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">Greening
-                                    DB</a>
+                                <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">GreeningDB</a>
                             </li>
                             <li>
                                 <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank"
-                                    title="Plant-mSubP">Plant mSubP</a>
+                                    title="Plant-mSubP">Plant-mSubP</a>
                             </li>
                             <li>
-                                <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">Lac
-                                    SubPred</a>
+                                <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">LacSubPred</a>
                             </li>
                             <li>
-                                <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">Lig Pred</a>
+                                <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">LigPred</a>
                             </li>
                             <li>
-                                <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">Ap-iNet</a>
+                                <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">AP-iNET</a>
                             </li>
                             <li>
-                                <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">At SubP</a>
+                                <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">AtSubP</a>
                             </li>
                             <li>
                                 <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank"
                                     title="RB-Pred">RB-Pred</a>
                             </li>
                             <li>
-                                <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RS
-                                    Lpred</a>
+                                <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RSLpred</a>
                             </li>
                             <li>
                                 <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
@@ -262,19 +259,15 @@
                         </div> -->
                     <div class="col-sm-5 col-md-4">
                         <div class="page_piky-title">
-                            <h2 class="page-title font-md lil-line">Dr. Rushmore is one of England’s Leading Research
-                                University</h2>
+                            <h2 class="page-title font-md lil-line">Dr. Kaundal's research: <i>information to inference</i> in OMICS data science</h2>
                         </div>
                     </div>
                     <div class="col-sm-7 col-md-7 col-md-offset-1">
-                        <p class="page_piky-text">Lorem ipsum dolor sit amet, con adipiscing elit. Etiam convallis elit
-                            id impedie. Quisq commodo ornare tortor Quiue bibendu m. magna vitae ex interdum cursus.
-                            Nullam lacinia pretium nibh, vitae imperdiet lacus tempor sit amet. Donec ultrices est nec
-                            tellus finibus facilisis. Nullam sodales justo id magna fringilla rutrum. Duis bibendum id
-                            eros congue bibendum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
-                            convallis elit id odio imperdiet feugiat. Quisque commodo ornare tortor. Quisque bibendum
-                            magna vitae ex interdum cursus. Nullam lacinia pretium nibh, vitae imperdiet lacus tempor
-                            sit amet.</p>
+                        <p class="page_piky-text">Biological data are accumulating faster than people’s capacity to analyze them. Our research interests and goals revolve
+                        around mitigating these bigdata issues in the context of “<i>information to inference</i>” scope. At USU, Dr. Kaundal has developed an <b>independent</b> and <b>collaborative</b>
+                        research program in bioinformatics, primarily focusing on computational mining of large multi-dimensional -<i>omics</i> datasets, and computational modeling using
+                        supervised (Machine Learning) and unsupervised (Bayesian-based) learning. Our group is actively developing novel tools and software to apply the gained knowledge
+                        towards organismal improvement. Research in KAABiL laboratory generally falls under the following major program objectives:</p>
                     </div>
                 </div>
             </section>
@@ -406,18 +399,12 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <ul class="list-unstyled entry-meta-list list-style-round_item">
-                            <li>Lorem ipsum dolor sit amet, con adipiscing elit. Etiam convallis elit id impedie. Quisq
-                                commodo ornare tortor Quiue bibendu.</li>
-                            <li>Duis bibendum id eros congue bibendum.Lorem ipsum dolor sit amet, consectetur adipiscing
-                                elit. </li>
-                            <li>Lorem ipsum dolor sit amet, con adipiscing elit. Etiam convallis elit id impedie. Quisq
-                                commodo ornare tortor Quiue bibendu.</li>
-                            <li>Duis bibendum id eros congue bibendum.Lorem ipsum dolor sit amet, consectetur adipiscing
-                                elit. </li>
-                            <li>Lorem ipsum dolor sit amet, con adipiscing elit. Etiam convallis elit id impedie. Quisq
-                                commodo ornare tortor Quiue bibendu.</li>
-                            <li>Duis bibendum id eros congue bibendum.Lorem ipsum dolor sit amet, consectetur adipiscing
-                                elit. </li>
+                            <li>Understand the genomic aspects of plant / animal pathogen evolution and/or virulence either at the organismal or population level,</li>
+                            <li>Develop novel computational algorithms to explore cross-kingdom threats and identify novel therapeutic candidates,</li>
+                            <li>Investigate the diversity of enzymes in soil metagenomes and develop advanced bioinformatics solutions to predict and recover novel enzyme encoding genes involved with the nitrogen (N) cycle from soil metagenomes,</li>
+                            <li>Develop and implement cost effective prediction tools / databases (customized searchable web portals),</li>
+                            <li>Establish high-end biocomputing infrastructure (High-Performance Computing Cluster, HPCC) and novel algorithms with AI while advancing bigdata research,</li>
+                            <li>Collaborate extensively and provide leadership in these research areas.</li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
@@ -435,10 +422,9 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-8">
                         <aside class="stage-halfbol_content">
-                            <h2 class="stage-title font-md lil-line">Rushmore is one of England’s</h2>
-                            <p class="stage-halfbol_text">Lorem ipsum dolor sit amet, con adipiscing elit. Etiam
-                                convallis elit id impedie. Quisq commodo ornare tortor Quiue bibendu. magna vitae ex
-                                interdum cursus.</p>
+                            <h2 class="stage-title font-md lil-line">KAABiL group is one of Utah’s</h2>
+                            <p class="stage-halfbol_text">leading bioinformatics lab. To date, Dr. Kaundal has trained more than 10 graduate and 10 undergrad
+                            students, 1 postdoctoral fellow, and 3 full-time bioinformatics staff members in his career research program.</p>
                             <a href="#" class="btn btn-action btn-gules">Join Research</a>
                         </aside>
                     </div>
@@ -509,7 +495,7 @@
                                 <div class="widget-main">
                                     <h2 class="widget-title">Publications</h2>
                                     <ul class="list list-unstyled list-footer-nav">
-                                        <li class="footer_text"><a href="lab_journal.html">Journal Article</a></li>
+                                        <li class="footer_text"><a href="lab_journal.html">Journal Articles</a></li>
                                         <li class="footer_text"><a href="lab_conf-talk.html">Conferences and Talks</a>
                                         </li>
                                     </ul>
@@ -581,12 +567,12 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <div class="widget_black_studio_tinymce" id="black-studio-tinymce-4">
-                            <div class="copyright">Copyright 2017 - <a href="https://wpmanageninja.com/">KAABiL Lab</a>
+                            <div class="copyright">Copyright 2017 - <a href="index.html">KAABiL Lab</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4 ">
-                        <div class="powredby">Developed and Managed by: <a href="https://wpmanageninja.com/">Kaundal
+                        <div class="powredby">Developed and Managed by: <a href="ourteam.html">Kaundal
                                 Research Group</a></div>
                     </div>
                 </div>
